src/objects/Country_SU__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>SU_Belgium__c</fullName>
        <label>SU - Belgium</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SU_Denmark__c</fullName>
        <label>SU - Denmark</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SU_Germany__c</fullName>
        <label>SU - Germany</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SU_Ireland__c</fullName>
        <label>SU - Ireland</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SU_Netherlands__c</fullName>
        <label>SU - Netherlands</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SU_Norway__c</fullName>
        <label>SU - Norway</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SU_Spain__c</fullName>
        <label>SU - Spain</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SU_Sweden__c</fullName>
        <label>SU - Sweden</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SU_UK__c</fullName>
        <label>SU - UK</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Country SU</label>
</CustomObject>